# CardputerZero-Examples

./: .gitignore  CHECKLIST.md  README.md
Demo_2048/: main.c
Demo_2048/packaging/: stage.sh
Demo_ImageViewer/: viewer.py
Demo_ImageViewer/packaging/: stage.sh
Demo_MarkdownReader/: reader.py
Demo_Matrix/: main.c
Demo_Matrix/packaging/: stage.sh
Demo_MusicSpectrum/: Makefile  skeleton.c
Demo_MusicSpectrum/packaging/: stage.sh
Demo_WifiScan/: scan.py
Flutter_Embedder/: README.md  plan.md
FrameBuffer_Game/packaging/: stage.sh
GPUI_Stub/: README.md
Game_Asteroids/packaging/: meta.env  stage.sh
Game_Invaders/packaging/: meta.env  stage.sh
Game_LunarLander/: Makefile  main.c
Game_TicTacToe/packaging/: meta.env  stage.sh
LVGL_HelloWorld/: CMakeLists.txt  lv_conf.h
LVGL_HelloWorld/src/: main.c
NES_Emulator/: CMakeLists.txt
NES_Emulator/packaging/: meta.env  stage.sh
NES_Emulator/src/: main.cpp
PyQt5_HelloWorld/: hello.py  run.sh
PyQt5_HelloWorld/packaging/: stage.sh
Python_Tkinter_HelloWorld/: hello_tk.py  run_self_mirror.sh  run_xvfb.sh
Python_Tkinter_HelloWorld/packaging/: stage.sh
Qt_HelloWorld/packaging/: stage.sh
SDL2_Game/packaging/: meta.env  stage.sh
SDL2_HelloWorld/packaging/: meta.env  stage.sh
Slint_HelloWorld/: Cargo.toml  README.md
Slint_HelloWorld/packaging/: ci-deps.sh  meta.env  stage.sh
Slint_HelloWorld/src/: main.rs
Slint_HelloWorld/ui/: appwindow.slint
docs/: PACKAGING.md
scripts/: pack-deb.sh
