[package]
name = "slint_hello"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = { version = "1.9", default-features = false, features = [
    "backend-linuxkms-noseat",
    "renderer-software",
    "compat-1-2",
] }

[build-dependencies]
slint-build = "1.9"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
